tried to create Light/Dark Mode, added in diferent ideas for sidebars, fixed a couple debugs in ap.js, register, and nav

--- a/front-end/src/App.scss
+++ b/front-end/src/App.scss
@@ -3,7 +3,7 @@ html {
 }
 
 body {
-    background-color: #ffffff;
+    // background-color: #ffffff;
     font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Helvetica, Arial, sans-serif, Apple Color Emoji, Segoe UI Emoji, Segoe UI Symbol;
     font-weight: normal;
     color: #495057;
